<resources>
    <string name="app_name">Contact</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="update_button">Update Contact</string>
    <string name="save_button">Save Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="_08099983784">08099983784</string>
    <string name="contact_name">Contact Name</string>
    <string name="clear_all_data">Delete All Contacts</string>
    <string name="title_activity_single_contact">single_contact_activity</string>
</resources>